--- a/src/components/css/CreateAccount.css
+++ b/src/components/css/CreateAccount.css
@@ -8,5 +8,11 @@
     justify-content: center;
 }
 
+.main-create-account-text{
+    font-size: larger;
+    font-weight: 500;
+    color: rgb(105, 105, 105);
+}
+
 
 
