--- a/src/components/css/Link.css
+++ b/src/components/css/Link.css
@@ -1,4 +1,15 @@
 .returna{
     display: flex;
     justify-content: center;
+    font-size: larger;
+}
+.accounta{
+    font-size: larger;
+}
+.ina{
+    font-size: large;
+}
+.Passworda {
+    font-size: larger;
+
 }
