--- a/src/components/forgot-password/ForgotPasswordForm.css
+++ b/src/components/forgot-password/ForgotPasswordForm.css
@@ -12,4 +12,16 @@
     padding: 0.5rem 1rem;
     margin-top: 1rem;
     font-size: 1.1rem;
+    border-radius: 20px ;
+    /* border: 2px solid rgb(0, 0, 0) ; */
+    background-color: rgb(40, 0, 108) ;
+    color: white ;
+}
+.otp-text{
+    color: rgb(57, 148, 4) ;
+    font-size: large;
+}
+.resend-otp{
+    color: rgb(0, 61, 125);
+    font-size: large ;
 }
