--- a/src/components/forgot-password/ResetPassword.css
+++ b/src/components/forgot-password/ResetPassword.css
@@ -13,5 +13,8 @@
     margin-top: 1rem;
     font-size: 1.1rem;
     margin-bottom: 0.7rem;
+    color: white ;
+    background-color: rgb(43, 0, 107);
+    border-radius: 20px;
     
 }
