--- a/src/pages/css/ForgotPassword.css
+++ b/src/pages/css/ForgotPassword.css
@@ -4,8 +4,9 @@
     margin-right:auto ;
     display: flex ;
     flex-direction: column;
-    background-color: rgb(241, 243, 245);
     padding-top: 2.5rem;
+    background-color: white;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 @media (max-width: 800px) {
