--- a/src/components/common/Redirect.css
+++ b/src/components/common/Redirect.css
@@ -1,11 +1,12 @@
 .main-redirect{
-    width: 100%;
+    width: 95%;
     margin-left :auto ;
     margin-right:auto ;
     display: flex ;
     flex-direction: column;
-    background-color: rgb(241, 243, 245);
+    background-color: rgb(255, 255, 255);
     padding-top: 2.5rem;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 .main-redirect button {
     width: 200px;
@@ -13,6 +14,9 @@
     margin-top: 1rem;
     font-size: 1.1rem;
     align-self: center;
+    color: white ;
+    background-color: rgb(43, 0, 107);
+    border-radius: 20px;
 }
 
 @media (max-width: 800px) {
