--- a/src/pages/css/Login.css
+++ b/src/pages/css/Login.css
@@ -5,11 +5,13 @@
     /* height: 100vh; */
     flex-direction: column;
     padding-top:1.5rem;
-    padding-bottom: 1.5rem;
+    /* padding-bottom: 1.5rem; */
     /* justify-content: space-between; */
     /* gap:1rem; */
-    background-color: rgb(230, 243, 254);
+    background-color: rgb(255, 255, 255);
     background-size: cover ;
+    border-radius: 10px ;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .main-guest-purchase {
@@ -24,6 +26,10 @@
     font-size: 1.1rem;
     /* height: 3rem; */
     margin-bottom: 0.7rem;
+    border-radius: 20px;
+    background-color: white;
+    color: rgb(62, 0, 128) ;
+    border: 2px solid rgb(144, 144, 144) ;
 }
 
 @media (max-width: 800px) {
