--- a/src/pages/css/Signup.css
+++ b/src/pages/css/Signup.css
@@ -5,7 +5,9 @@
     margin: auto;
     display: flex;
     flex-direction: column;
-    background-color: rgb(250, 245, 245);
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px ;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 @media (max-width: 800px) {
